fix: remove 100vw of body (overflow)

--- a/src/style.css
+++ b/src/style.css
@@ -16,5 +16,4 @@ body {
   align-items: flex-start;
   display: flex;
   justify-content: center;
-  width: 100vw;
 }
