--- a/src/traditional/style.css
+++ b/src/traditional/style.css
@@ -6,7 +6,7 @@ main.traditional {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  width: 100vw;
 }
 
 section.box {
